--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -2,28 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b4c588ff-d49a-4477-a795-7fd9e848f884",
+   "execution_count": 17,
+   "id": "f8702cd1-2678-4a6d-94a8-1340a73642a4",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Import necessary libraries\n",
-    "from flask import Flask, request, render_template, send_file\n",
-    "from flask_ngrok import run_with_ngrok\n",
+    "import tkinter as tk\n",
+    "from tkinter import filedialog\n",
     "import joblib\n",
     "import os\n",
     "import pandas as pd\n",
-    "from werkzeug.utils import secure_filename\n",
     "\n",
-    "# Initialize Flask application\n",
-    "app = Flask(__name__)\n",
+    "# Initialize Tkinter application\n",
+    "root = tk.Tk()\n",
+    "root.title(\"Machine Learning Pipeline\")\n",
     "\n",
     "# Directory where models are saved\n",
     "model_dir = 'saved_models'\n",
-    "upload_folder = 'uploads'\n",
-    "os.makedirs(upload_folder, exist_ok=True)\n",
+    "\n",
+    "model_name_mapping = {\n",
+    "    \"Logistic Regression\": \"lr_model\",\n",
+    "    \"Decision Tree\": \"dt_model\",\n",
+    "    \"Random Forest\": \"rf_model\",\n",
+    "    \"Gradient Boosting\": \"gb_model\",\n",
+    "    \"XGBoost\": \"xgb_model\",\n",
+    "    \"LightGBM\": \"lgb_model\",\n",
+    "    \"K-Nearest Neighbors\": \"knn_model\",\n",
+    "    \"Support Vector Machine\": \"svm_model\",\n",
+    "    \"Naive Bayes\": \"nb_model\",\n",
+    "    \"AdaBoost\": \"ada_model\",\n",
+    "    \"MLP\": \"mlp_model\",\n",
+    "    \"Stacking\": \"stack_model\"\n",
+    "}\n",
     "\n",
     "# Function to load a model pipeline\n",
     "def load_model(model_name):\n",
@@ -33,58 +45,155 @@
     "    else:\n",
     "        raise ValueError(f\"Model {model_name} is not recognized or does not exist.\")\n",
     "\n",
-    "# Home route to render the HTML form\n",
-    "@app.route('/')\n",
-    "def home():\n",
-    "    return render_template('index.html')\n",
+    "# Function to handle file upload\n",
+    "def upload_file():\n",
+    "    filename = filedialog.askopenfilename(initialdir=\"/\", title=\"Select file\", filetypes=((\"CSV files\", \"*.csv\"), (\"All files\", \"*.*\")))\n",
+    "    entry_path.delete(0, tk.END)\n",
+    "    entry_path.insert(0, filename)\n",
     "\n",
-    "# Predict route to handle file upload and return predictions\n",
-    "@app.route('/predict', methods=['POST'])\n",
+    "# Function to handle prediction\n",
     "def predict():\n",
-    "    if 'file' not in request.files:\n",
-    "        return \"No file part\"\n",
-    "    \n",
-    "    file = request.files['file']\n",
-    "    \n",
-    "    if file.filename == '':\n",
-    "        return \"No selected file\"\n",
-    "    \n",
-    "    if file:\n",
-    "        filename = secure_filename(file.filename)\n",
-    "        file_path = os.path.join(upload_folder, filename)\n",
-    "        file.save(file_path)\n",
-    "        \n",
-    "        data = pd.read_csv(file_path)\n",
-    "        \n",
-    "        # Drop columns named 'id' or 'class' if they exist\n",
-    "        if 'id' in data.columns:\n",
-    "            data = data.drop(columns=['id'])\n",
-    "        if 'class' in data.columns:\n",
-    "            data = data.drop(columns=['class'])\n",
-    "        \n",
-    "        model_name = request.form['model']\n",
-    "        model = load_model(model_name)\n",
-    "        \n",
-    "        predictions = model.predict(data)\n",
-    "        data['Predictions'] = predictions\n",
-    "        \n",
-    "        output_path = os.path.join(upload_folder, 'predictions.csv')\n",
-    "        data.to_csv(output_path, index=False)\n",
-    "        \n",
-    "        return send_file(output_path, as_attachment=True)\n",
+    "    filepath = entry_path.get()\n",
+    "    if not filepath:\n",
+    "        label_result.config(text=\"No file selected\", fg=\"red\")\n",
+    "        return\n",
     "\n",
-    "# Running the Flask app\n",
-    "if __name__ == \"__main__\":\n",
-    "    # Start the Flask app using Waitress WSGI server\n",
-    "    from waitress import serve\n",
+    "    if not os.path.exists(filepath):\n",
+    "        label_result.config(text=\"File does not exist\", fg=\"red\")\n",
+    "        return\n",
     "\n",
-    "    serve(app, host='127.0.0.1', port=5000)"
+    "    data = pd.read_csv(filepath)\n",
+    "\n",
+    "    user_friendly_model_name = variable_model.get()\n",
+    "    model_name = model_name_mapping.get(user_friendly_model_name)\n",
+    "\n",
+    "    pipeline = load_model(model_name)\n",
+    "\n",
+    "    predictions = pipeline.predict(data)\n",
+    "    data['Predictions'] = predictions\n",
+    "\n",
+    "    # Extract filename without extension\n",
+    "    file_name = os.path.splitext(os.path.basename(filepath))[0]\n",
+    "    output_path = f\"{file_name}_{model_name}.csv\"\n",
+    "\n",
+    "    data.to_csv(output_path, index=False)\n",
+    "\n",
+    "    label_result.config(text=f\"Predictions saved to {output_path}\", fg=\"green\")\n",
+    "\n",
+    "# Create components\n",
+    "label_file = tk.Label(root, text=\"Select CSV File:\")\n",
+    "label_file.grid(row=0, column=0, padx=10, pady=10)\n",
+    "\n",
+    "entry_path = tk.Entry(root, width=50)\n",
+    "entry_path.grid(row=0, column=1, padx=10, pady=10)\n",
+    "\n",
+    "button_browse = tk.Button(root, text=\"Browse\", command=upload_file)\n",
+    "button_browse.grid(row=0, column=2, padx=10, pady=10)\n",
+    "\n",
+    "label_model = tk.Label(root, text=\"Select Model:\")\n",
+    "label_model.grid(row=1, column=0, padx=10, pady=10)\n",
+    "\n",
+    "model_names = list(model_name_mapping.keys())\n",
+    "variable_model = tk.StringVar(root)\n",
+    "variable_model.set(model_names[0])\n",
+    "option_model = tk.OptionMenu(root, variable_model, *model_names)\n",
+    "option_model.grid(row=1, column=1, padx=10, pady=10)\n",
+    "\n",
+    "button_predict = tk.Button(root, text=\"Predict\", command=predict)\n",
+    "button_predict.grid(row=1, column=2, padx=10, pady=10)\n",
+    "\n",
+    "label_result = tk.Label(root, text=\"\", fg=\"green\")\n",
+    "label_result.grid(row=2, column=0, columnspan=3, padx=10, pady=10)\n",
+    "\n",
+    "# Run the Tkinter application\n",
+    "root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b4c588ff-d49a-4477-a795-7fd9e848f884",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# # Import necessary libraries\n",
+    "# from flask import Flask, request, render_template, send_file\n",
+    "# from flask_ngrok import run_with_ngrok\n",
+    "# import joblib\n",
+    "# import os\n",
+    "# import pandas as pd\n",
+    "# from werkzeug.utils import secure_filename\n",
+    "\n",
+    "# # Initialize Flask application\n",
+    "# app = Flask(__name__)\n",
+    "\n",
+    "# # Directory where models are saved\n",
+    "# model_dir = 'saved_models'\n",
+    "# upload_folder = 'uploads'\n",
+    "# os.makedirs(upload_folder, exist_ok=True)\n",
+    "\n",
+    "# # Function to load a model pipeline\n",
+    "# def load_model(model_name):\n",
+    "#     model_path = os.path.join(model_dir, f'{model_name}.pkl')\n",
+    "#     if os.path.exists(model_path):\n",
+    "#         return joblib.load(model_path)\n",
+    "#     else:\n",
+    "#         raise ValueError(f\"Model {model_name} is not recognized or does not exist.\")\n",
+    "\n",
+    "# # Home route to render the HTML form\n",
+    "# @app.route('/')\n",
+    "# def home():\n",
+    "#     return render_template('index.html')\n",
+    "\n",
+    "# # Predict route to handle file upload and return predictions\n",
+    "# @app.route('/predict', methods=['POST'])\n",
+    "# def predict():\n",
+    "#     if 'file' not in request.files:\n",
+    "#         return \"No file part\"\n",
+    "    \n",
+    "#     file = request.files['file']\n",
+    "    \n",
+    "#     if file.filename == '':\n",
+    "#         return \"No selected file\"\n",
+    "    \n",
+    "#     if file:\n",
+    "#         filename = secure_filename(file.filename)\n",
+    "#         file_path = os.path.join(upload_folder, filename)\n",
+    "#         file.save(file_path)\n",
+    "        \n",
+    "#         data = pd.read_csv(file_path)\n",
+    "        \n",
+    "#         # Drop columns named 'id' or 'class' if they exist\n",
+    "#         if 'id' in data.columns:\n",
+    "#             data = data.drop(columns=['id'])\n",
+    "#         if 'class' in data.columns:\n",
+    "#             data = data.drop(columns=['class'])\n",
+    "        \n",
+    "#         model_name = request.form['model']\n",
+    "#         model = load_model(model_name)\n",
+    "        \n",
+    "#         predictions = model.predict(data)\n",
+    "#         data['Predictions'] = predictions\n",
+    "        \n",
+    "#         output_path = os.path.join(upload_folder, 'predictions.csv')\n",
+    "#         data.to_csv(output_path, index=False)\n",
+    "        \n",
+    "#         return send_file(output_path, as_attachment=True)\n",
+    "\n",
+    "# # Running the Flask app\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     # Start the Flask app using Waitress WSGI server\n",
+    "#     from waitress import serve\n",
+    "\n",
+    "#     serve(app, host='127.0.0.1', port=5000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8702cd1-2678-4a6d-94a8-1340a73642a4",
+   "id": "a7be7399-95d5-4bbb-bbcd-d3ddc898568d",
    "metadata": {},
    "outputs": [],
    "source": []
