--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "f8702cd1-2678-4a6d-94a8-1340a73642a4",
    "metadata": {
     "tags": []
@@ -14,6 +14,16 @@
     "import joblib\n",
     "import os\n",
     "import pandas as pd\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, AdaBoostClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import StackingClassifier\n",
     "\n",
     "# Initialize Tkinter application\n",
     "root = tk.Tk()\n",
@@ -64,13 +74,28 @@
     "\n",
     "    data = pd.read_csv(filepath)\n",
     "\n",
+    "    # Check if 'id' or 'class' columns exist and remove them\n",
+    "    id_column = None\n",
+    "    if 'id' in data.columns:\n",
+    "        id_column = data['id']\n",
+    "        data = data.drop(columns=['id'])\n",
+    "    if 'class' in data.columns:\n",
+    "        data = data.drop(columns=['class'])\n",
+    "\n",
     "    user_friendly_model_name = variable_model.get()\n",
     "    model_name = model_name_mapping.get(user_friendly_model_name)\n",
     "\n",
     "    pipeline = load_model(model_name)\n",
     "\n",
     "    predictions = pipeline.predict(data)\n",
-    "    data['Predictions'] = predictions\n",
+    "    probabilities = pipeline.predict_proba(data)[:, 1]  # Probability of the positive class\n",
+    "\n",
+    "    data['Probability'] = probabilities\n",
+    "    data['Prediction'] = predictions\n",
+    "\n",
+    "    # Add 'id' column back to the leftmost position if it exists\n",
+    "    if id_column is not None:\n",
+    "        data.insert(0, 'id', id_column)\n",
     "\n",
     "    # Extract filename without extension\n",
     "    file_name = os.path.splitext(os.path.basename(filepath))[0]\n",
@@ -111,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "b4c588ff-d49a-4477-a795-7fd9e848f884",
    "metadata": {
     "tags": []
@@ -193,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7be7399-95d5-4bbb-bbcd-d3ddc898568d",
+   "id": "e0062dd6-5090-4251-bc8f-3a5aa60d10e4",
    "metadata": {},
    "outputs": [],
    "source": []
