--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "f8702cd1-2678-4a6d-94a8-1340a73642a4",
    "metadata": {
     "tags": []
@@ -99,7 +99,7 @@
     "\n",
     "    # Extract filename without extension\n",
     "    file_name = os.path.splitext(os.path.basename(filepath))[0]\n",
-    "    output_path = f\"{file_name}_{model_name}.csv\"\n",
+    "    output_path = f\"{file_name}_{model_name}_predict.csv\"\n",
     "\n",
     "    data.to_csv(output_path, index=False)\n",
     "\n",
@@ -214,14 +214,6 @@
     "\n",
     "#     serve(app, host='127.0.0.1', port=5000)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0062dd6-5090-4251-bc8f-3a5aa60d10e4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
